--- a/css/contact.css
+++ b/css/contact.css
@@ -4,165 +4,7 @@ body {
   font-family: "Raleway", sans-serif;
 }
 
-#contact {
-  background-color: #222222;
-  padding: 30px;
-}
-
-#contact .contact-heading {
-  position: relative;
-  margin-bottom: 5px;
-}
-
-#contact .contact-heading h2 {
-  color: #aaaaaa;
-  font-size: 14px;
-  font-weight: 600;
-  font-family: "Poppins", sans-serif;
-  margin: 0;
-  letter-spacing: 2px;
-}
-
-#contact .contact-heading h2::after {
-  content: "";
-  position: absolute;
-  border-bottom: 1px solid #4ceb95;
-  width: 120px;
-  height: 1px;
-  top: 8px;
-  left: 93px;
-}
-
-#contact .contact-title {
-}
-
-#contact .contact-title p {
-  font-size: 35px;
-  font-weight: 700;
-  color: #fff;
-  font-family: "Poppins", sans-serif;
-}
-
-#contact .contact-cnt {
-}
-
-#contact .contact-cnt .contact-cnt-addr {
-  background: rgba(255, 255, 255, 0.08);
-  padding: 20px;
-}
-
-#contact .contact-cnt .contact-cnt-addr .contact-cnt-addr-icon {
-}
-
-#contact .contact-cnt .contact-cnt-addr .contact-cnt-addr-icon i {
-  font-size: 24px;
-  display: inline-block;
-  color: #18d26e;
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-  padding: 14px;
-}
-
-#contact .contact-cnt .contact-cnt-addr .contact-cnt-addr-itm {
-  margin-left: 15px;
-}
-
-#contact
-  .contact-cnt
-  .contact-cnt-addr
-  .contact-cnt-addr-itm
-  .contact-cnt-addr-itm-hdng {
-}
-
-#contact
-  .contact-cnt
-  .contact-cnt-addr
-  .contact-cnt-addr-itm
-  .contact-cnt-addr-itm-hdng
-  h3 {
-  font-size: 20px;
-  font-weight: 700;
-  color: rgba(255, 255, 255, 0.5);
-  font-family: "Raleway", sans-serif;
-}
-
-#contact
-  .contact-cnt
-  .contact-cnt-addr
-  .contact-cnt-addr-itm
-  .contact-cnt-addr-itm-elem {
-}
-
-#contact
-  .contact-cnt
-  .contact-cnt-addr
-  .contact-cnt-addr-itm
-  .contact-cnt-addr-itm-elem
-  p {
-  font-size: 14px;
-  line-height: 24px;
-  color: #fff;
-  font-family: "Open Sans", sans-serif;
-  margin: 0;
-}
-
-#contact .contact-cnt .contact-cnt-links {
-  background: rgba(255, 255, 255, 0.08);
-  padding: 20px;
-}
-
-#contact .contact-cnt .contact-cnt-links .contact-cnt-links-icon {
-}
-
-#contact .contact-cnt .contact-cnt-links .contact-cnt-links-icon i {
-  font-size: 24px;
-  display: inline-block;
-  color: #18d26e;
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-  padding: 14px;
-}
-
-#contact .contact-cnt .contact-cnt-links .contact-cnt-links-itm {
-  margin-left: 15px;
-}
-
-#contact
-  .contact-cnt
-  .contact-cnt-links
-  .contact-cnt-links-itm
-  .contact-cnt-links-itm-hdng {
-}
-
-#contact
-  .contact-cnt
-  .contact-cnt-links
-  .contact-cnt-links-itm
-  .contact-cnt-links-itm-hdng
-  h3 {
-  font-size: 20px;
-  font-weight: 700;
-  color: rgba(255, 255, 255, 0.5);
-  font-family: "Raleway", sans-serif;
-}
-
-#contact
-  .contact-cnt
-  .contact-cnt-links
-  .contact-cnt-links-itm
-  .contact-cnt-links-itm-elem {
-}
-
-#contact
-  .contact-cnt
-  .contact-cnt-links
-  .contact-cnt-links-itm
-  .contact-cnt-links-itm-elem
-  a {
-  font-size: 18px;
-  line-height: 24px;
-  color: #fff;
-  font-family: "Open Sans", sans-serif;
-  margin-right: 12px;
-  text-decoration: none;
+#header {
+  background: #e9e8e6;
+  padding: 15px 0;
 }
