--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,34 @@ body {
   font-weight: 600;
 }
 
+/* Legals Section */
+#legals {
+  background: #e9e8e6;
+  padding: 30px 0;
+}
+
+#legals .legals-cnt {
+}
+
+#legals .legals-cnt p {
+  font-size: 14px;
+  color: #222222;
+  font-family: "Open Sans", sans-serif;
+}
+
+#legals .legals-btmcnt {
+}
+
+#legals .legals-btmcnt p {
+  font-size: 13px;
+  color: #222222;
+  font-family: "Open Sans", sans-serif;
+}
+
+#legals .legals-btmcnt a {
+  color: #34b7a7;
+}
+
 @media (min-width: 576px) {
 }
 
