--- a/scss/styles.css
+++ b/scss/styles.css
@@ -7,6 +7,39 @@
   text-decoration: none;
 }
 
+.filled-button {
+  font-size: 20px;
+  font-weight: 400;
+  color: #fff;
+  background: crimson;
+  display: inline-block;
+  text-decoration: none;
+  padding: 10px 30px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid crimson;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.filled-button:hover {
+  color: crimson;
+  background: #fff;
+}
+
+@media (min-width: 768px) {
+  .filled-button {
+    font-size: 23px;
+  }
+}
+
+@media (min-width: 992px) {
+  .filled-button {
+    font-size: 25px;
+    padding: 12px 36px;
+  }
+}
+
 .header {
   position: fixed;
   width: 100%;
@@ -168,31 +201,94 @@
   }
 }
 
-.hero a {
-  font-size: 20px;
-  font-weight: 400;
-  color: #fff;
-  background: crimson;
-  display: inline-block;
-  text-decoration: none;
-  padding: 10px 30px;
-  margin-top: 20px;
-  border-radius: 6px;
-  border: 2px solid crimson;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+.hero .filled-button:hover {
+  background: transparent;
+}
+
+.about {
+  padding: 6.3rem 0;
+}
+
+.about .title {
+  font-size: 2.5rem;
+  font-weight: 500;
+  text-align: center;
+  position: relative;
+  padding-bottom: 1.5rem;
+  margin-bottom: 4rem;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.about .title::after {
+  content: "who i am";
+  position: absolute;
+  bottom: -0.6rem;
+  left: 50%;
+  padding: 0 0.5rem;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  font-size: 1.3rem;
+  color: crimson;
+  background: #fff;
+}
+
+.about .title::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  background: #000000;
+  height: 0.2rem;
+  width: 11rem;
+}
+
+.about .about-content .about-content-left {
+  margin-bottom: 4rem;
 }
 
 @media (min-width: 768px) {
-  .hero a {
-    font-size: 23px;
+  .about .about-content .about-content-left {
+    text-align: center;
   }
 }
 
-@media (min-width: 992px) {
-  .hero a {
-    font-size: 25px;
-    padding: 12px 36px;
+.about .about-content .about-content-left img {
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .about .about-content .about-content-left img {
+    height: 22rem;
+    width: 22rem;
   }
+}
+
+.about .about-content .about-content-right {
+  font-family: "Poppins", sans-serif;
+}
+
+.about .about-content .about-content-right .text {
+  font-size: 1.3rem;
+  font-weight: 600;
+  margin-bottom: 0.7rem;
+}
+
+@media (min-width: 768px) {
+  .about .about-content .about-content-right .text {
+    font-size: 1.6rem;
+  }
+}
+
+.about .about-content .about-content-right .text span {
+  color: crimson;
+  font-weight: 500;
+}
+
+.about .about-content .about-content-right p {
+  font-size: 1rem;
+  text-align: justify;
+  margin: 0;
 }
 /*# sourceMappingURL=styles.css.map */
