--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,6 +8,33 @@
   text-decoration: none;
 }
 
+// Common Styling
+.filled-button {
+  font-size: 20px;
+  font-weight: 400;
+  color: #fff;
+  background: crimson;
+  display: inline-block;
+  text-decoration: none;
+  padding: 10px 30px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid crimson;
+  transition: all 0.3s ease;
+  &:hover {
+    color: crimson;
+    background: #fff;
+  }
+  @include for-tablet-portrait-up {
+    font-size: 23px;
+  }
+  @include for-tablet-landscape-up {
+    font-size: 25px;
+    padding: 12px 36px;
+  }
+}
+// End Common Styling
+
 // Header Section
 .header {
   position: fixed;
@@ -84,8 +111,6 @@
   }
 }
 
-.header .menu {
-}
 .header .menu.active {
   left: 0;
 }
@@ -141,25 +166,81 @@
       font-size: 40px;
     }
   }
-  a {
-    font-size: 20px;
-    font-weight: 400;
-    color: #fff;
-    background: crimson;
-    display: inline-block;
-    text-decoration: none;
-    padding: 10px 30px;
-    margin-top: 20px;
-    border-radius: 6px;
-    border: 2px solid crimson;
-    transition: all 0.3s ease;
-    @include for-tablet-portrait-up {
-      font-size: 23px;
-    }
-    @include for-tablet-landscape-up {
-      font-size: 25px;
-      padding: 12px 36px;
+  .filled-button {
+    &:hover {
+      background: transparent;
     }
   }
 }
 // End Hero Section
+
+// About Section
+.about {
+  padding: 6.3rem 0;
+  .title {
+    font-size: 2.5rem;
+    font-weight: 500;
+    text-align: center;
+    position: relative;
+    padding-bottom: 1.5rem;
+    margin-bottom: 4rem;
+    font-family: "Ubuntu", sans-serif;
+    &::after {
+      content: "who i am";
+      position: absolute;
+      bottom: -0.6rem;
+      left: 50%;
+      padding: 0 0.5rem;
+      transform: translateX(-50%);
+      font-size: 1.3rem;
+      color: crimson;
+      background: #fff;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #000000;
+      height: 0.2rem;
+      width: 11rem;
+    }
+  }
+  .about-content {
+    .about-content-left {
+      margin-bottom: 4rem;
+      @include for-tablet-portrait-up {
+        text-align: center;
+      }
+      img {
+        width: 100%;
+        @include for-tablet-portrait-up {
+          height: 22rem;
+          width: 22rem;
+        }
+      }
+    }
+    .about-content-right {
+      font-family: "Poppins", sans-serif;
+      .text {
+        font-size: 1.3rem;
+        font-weight: 600;
+        margin-bottom: 0.7rem;
+        @include for-tablet-portrait-up {
+          font-size: 1.6rem;
+        }
+        span {
+          color: crimson;
+          font-weight: 500;
+        }
+      }
+      p {
+        font-size: 1rem;
+        text-align: justify;
+        margin: 0;
+      }
+    }
+  }
+}
+// End About Section
