--- a/scss/styles.css
+++ b/scss/styles.css
@@ -142,6 +142,10 @@
   color: #fff;
 }
 
+.header.sticky .menu-wrapper .menu li a:hover {
+  color: #fff;
+}
+
 .hero {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -388,5 +392,121 @@
 
 .services .services-card:hover .non-hover {
   display: none;
+}
+
+.skills {
+  padding: 6.3rem 0;
+  font-family: "Poppins", sans-serif;
+}
+
+.skills .title {
+  font-size: 2.5rem;
+  font-weight: 500;
+  text-align: center;
+  position: relative;
+  padding-bottom: 1.5rem;
+  margin-bottom: 4rem;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.skills .title::after {
+  content: "what i know";
+  position: absolute;
+  bottom: -0.6rem;
+  left: 50%;
+  padding: 0 0.5rem;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  font-size: 1.3rem;
+  color: crimson;
+  background: #fff;
+}
+
+.skills .title::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  background: #000000;
+  height: 0.2rem;
+  width: 11rem;
+}
+
+.skills .skills-content .skills-content-left {
+  margin-bottom: 3rem;
+}
+
+@media (min-width: 992px) {
+  .skills .skills-content .skills-content-left {
+    margin-bottom: 0rem;
+  }
+}
+
+.skills .skills-content .skills-content-left h3 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 0.9rem;
+}
+
+.skills .skills-content .skills-content-left p {
+  font-size: 1rem;
+  text-align: justify;
+  margin: 0;
+}
+
+.skills .skills-content .skills-content-right .bars {
+  margin-bottom: 1rem;
+}
+
+.skills .skills-content .skills-content-right .bars .skills-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 0.3rem;
+}
+
+.skills .skills-content .skills-content-right .bars .skills-info span {
+  font-size: 1.15rem;
+  font-weight: 500;
+}
+
+.skills .skills-content .skills-content-right .bars .skills-line {
+  position: relative;
+  width: 100%;
+  height: 0.3rem;
+  background-color: #ccc;
+}
+
+.skills .skills-content .skills-content-right .bars .skills-line::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: crimson;
+}
+
+.skills .skills-content .skills-content-right .bars .html::before {
+  width: 90%;
+}
+
+.skills .skills-content .skills-content-right .bars .css::before {
+  width: 90%;
+}
+
+.skills .skills-content .skills-content-right .bars .js::before {
+  width: 70%;
+}
+
+.skills .skills-content .skills-content-right .bars .bootstrap::before {
+  width: 80%;
 }
 /*# sourceMappingURL=styles.css.map */
