--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,22 +8,27 @@
   text-decoration: none;
 }
 
+// Color Variables
+$primary: crimson;
+$light: #fff;
+$dark: #000000;
+
 // Common Styling
 .filled-button {
   font-size: 20px;
   font-weight: 400;
-  color: #fff;
-  background: crimson;
+  color: $light;
+  background: $primary;
   display: inline-block;
   text-decoration: none;
   padding: 10px 30px;
   margin-top: 20px;
   border-radius: 6px;
-  border: 2px solid crimson;
+  border: 2px solid $primary;
   transition: all 0.3s ease;
   &:hover {
-    color: crimson;
-    background: #fff;
+    color: $primary;
+    background: $light;
   }
   @include for-tablet-portrait-up {
     font-size: 23px;
@@ -42,10 +47,10 @@
   z-index: 999;
   font-family: "Ubuntu", sans-serif;
   padding: 30px 0;
-  background: #000000;
+  background: $dark;
   transition: all 0.3s ease;
   @include for-phone-only {
-    background-color: #000000;
+    background-color: $dark;
   }
   .menu-wrapper {
     display: flex;
@@ -53,13 +58,13 @@
     align-items: center;
     .logo {
       a {
-        color: #fff;
+        color: $light;
         font-size: 35px;
         font-weight: 600;
         text-decoration: none;
       }
       span {
-        color: crimson;
+        color: $primary;
       }
     }
     .menu {
@@ -84,7 +89,7 @@
           display: inline-block;
         }
         a {
-          color: #fff;
+          color: $light;
           // display: inline-block;
           font-size: 25px;
           margin: 20px 0;
@@ -96,7 +101,7 @@
             // display: block;
             margin: 0 0 0 25px;
             &:hover {
-              color: crimson;
+              color: $primary;
               transition: color 0.3s ease;
             }
           }
@@ -116,48 +121,48 @@
 }
 
 .header.sticky {
-  background: crimson;
+  background: $primary;
   padding: 15px 0;
   .menu-wrapper {
     .logo {
       span {
-        color: #fff;
+        color: $light;
       }
     }
     .menu {
       li {
         a {
           &:hover {
-            color: #fff;
+            color: $light;
           }
         }
       }
     }
   }
 }
-// End Header Section
+// Header Section Ends
 
-// Hero Section
+// Hero Section Starts
 .hero {
   display: flex;
   align-items: center;
   height: 100vh;
   min-height: 500px;
-  background: #000000;
+  background: $dark;
   font-family: "Ubuntu", sans-serif;
   p {
     font-size: 27px;
-    color: #fff;
+    color: $light;
     margin: 0;
     span {
-      color: crimson;
+      color: $primary;
       font-weight: 500;
     }
   }
   h1 {
     font-size: 50px;
     font-weight: 600;
-    color: #fff;
+    color: $light;
     margin: 0;
     @include for-tablet-portrait-up {
       font-size: 70px;
@@ -202,8 +207,8 @@
       padding: 0 0.5rem;
       transform: translateX(-50%);
       font-size: 1.3rem;
-      color: crimson;
-      background: #fff;
+      color: $primary;
+      background: $light;
     }
     &::before {
       content: "";
@@ -211,7 +216,7 @@
       bottom: 0;
       left: 50%;
       transform: translateX(-50%);
-      background: #000000;
+      background: $dark;
       height: 0.2rem;
       width: 11rem;
     }
@@ -240,7 +245,7 @@
           font-size: 1.6rem;
         }
         span {
-          color: crimson;
+          color: $primary;
           font-weight: 500;
         }
       }
@@ -257,26 +262,26 @@
 // Services Section
 .services {
   padding: 6.3rem 0;
-  background: #000000;
+  background: $dark;
   .title {
     font-size: 2.5rem;
     font-weight: 500;
-    color: #fff;
+    color: $light;
     text-align: center;
     position: relative;
     padding-bottom: 1.5rem;
     margin-bottom: 4rem;
     font-family: "Ubuntu", sans-serif;
     &::after {
-      content: "who i provide";
+      content: "what i provide";
       position: absolute;
       bottom: -0.6rem;
       left: 50%;
       padding: 0 0.5rem;
       transform: translateX(-50%);
       font-size: 1.3rem;
-      color: crimson;
-      background: #000000;
+      color: $primary;
+      background: $dark;
     }
     &::before {
       content: "";
@@ -284,7 +289,7 @@
       bottom: 0;
       left: 50%;
       transform: translateX(-50%);
-      background: #fff;
+      background: $light;
       height: 0.2rem;
       width: 11rem;
     }
@@ -316,17 +321,17 @@
       h2 {
         font-size: 1.6rem;
         font-weight: 500;
-        color: #fff;
+        color: $light;
         margin: 0.7rem 0 0.7rem 0;
       }
       p {
         font-size: 1rem;
-        color: #fff;
+        color: $light;
         margin: 0;
       }
     }
     &:hover {
-      background: crimson;
+      background: $primary;
       .on-hover {
         display: block;
       }
@@ -358,8 +363,8 @@
       padding: 0 0.5rem;
       transform: translateX(-50%);
       font-size: 1.3rem;
-      color: crimson;
-      background: #fff;
+      color: $primary;
+      background: $light;
     }
     &::before {
       content: "";
@@ -367,7 +372,7 @@
       bottom: 0;
       left: 50%;
       transform: translateX(-50%);
-      background: #000000;
+      background: $dark;
       height: 0.2rem;
       width: 11rem;
     }
@@ -413,7 +418,7 @@
             height: 100%;
             left: 0;
             top: 0;
-            background: crimson;
+            background: $primary;
           }
         }
         .html {
@@ -446,11 +451,11 @@
 .teams {
   padding: 6.3rem 0;
   font-family: "Poppins", sans-serif;
-  background: #000000;
+  background: $dark;
   .title {
     font-size: 2.5rem;
     font-weight: 500;
-    color: #fff;
+    color: $light;
     text-align: center;
     position: relative;
     padding-bottom: 1.5rem;
@@ -464,8 +469,8 @@
       padding: 0 0.5rem;
       transform: translateX(-50%);
       font-size: 1.3rem;
-      color: crimson;
-      background: #000000;
+      color: $primary;
+      background: $dark;
     }
     &::before {
       content: "";
@@ -473,7 +478,7 @@
       bottom: 0;
       left: 50%;
       transform: translateX(-50%);
-      background: #fff;
+      background: $light;
       height: 0.2rem;
       width: 11rem;
     }
@@ -485,27 +490,47 @@
       padding: 2rem;
       margin: 0 1rem;
       border-radius: 0.5rem;
-      .team-img {
-        text-align: center;
-        img {
-          height: 9rem;
-          width: 9rem;
-          margin: 0 auto;
-          object-fit: cover;
-          border-radius: 50%;
-          border: 0.2rem solid crimson;
+      .teams-card-body {
+        .team-img {
+          text-align: center;
+          img {
+            height: 9rem;
+            width: 9rem;
+            margin: 0 auto;
+            object-fit: cover;
+            border-radius: 50%;
+            border: 0.2rem solid $primary;
+          }
+        }
+        h2 {
+          font-size: 1.8rem;
+          color: $light;
+          text-align: center;
+          margin: 1rem 0;
+          @include for-tablet-landscape-up {
+            font-size: 1.6rem;
+          }
+          @include for-desktop-up {
+            font-size: 2rem;
+          }
+        }
+        p {
+          font-size: 1.1rem;
+          color: $light;
+          text-align: center;
+        }
+        &:hover {
+          transform: scale(1.05);
+          transition: all 0.3s ease;
         }
       }
-      h2 {
-        font-size: 2rem;
-        color: #fff;
-        text-align: center;
-        margin: 1rem 0;
-      }
-      p {
-        font-size: 1.1rem;
-        color: #fff;
-        text-align: center;
+      &:hover {
+        background-color: $primary;
+        .team-img {
+          img {
+            border: 0.2rem solid $light;
+          }
+        }
       }
     }
   }
@@ -517,8 +542,8 @@
         height: 0.9rem;
         display: inline-block;
         cursor: pointer;
-        background-color: #fff;
-        border: 0.1rem solid crimson;
+        background-color: $light;
+        border: 0.1rem solid $primary;
         border-radius: 2rem;
         &::before {
           display: none;
@@ -527,9 +552,148 @@
     }
     .slick-active {
       button {
-        background-color: crimson;
+        background-color: $primary;
       }
     }
   }
 }
 // Teams Section Ends
+
+// Contact Section Starts
+.contact {
+  padding: 6.3rem 0;
+  font-family: "Poppins", sans-serif;
+  background: $light;
+  .title {
+    font-size: 2.5rem;
+    font-weight: 500;
+    color: $dark;
+    text-align: center;
+    position: relative;
+    padding-bottom: 1.5rem;
+    margin-bottom: 4rem;
+    font-family: "Ubuntu", sans-serif;
+    &::after {
+      content: "get in touch";
+      position: absolute;
+      bottom: -0.6rem;
+      left: 50%;
+      padding: 0 0.5rem;
+      transform: translateX(-50%);
+      font-size: 1.3rem;
+      color: $primary;
+      background: $light;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      background: $dark;
+      height: 0.2rem;
+      width: 11rem;
+    }
+  }
+  .contact-inner-details {
+    .contact-details {
+      margin-bottom: 3rem;
+      @include for-tablet-portrait-up {
+        margin-bottom: 0;
+      }
+      h3 {
+        font-size: 1.2rem;
+        font-weight: 600;
+        margin-bottom: 0.9rem;
+      }
+      p {
+        font-size: 1rem;
+        @include for-phone-only {
+          word-spacing: 0rem;
+        }
+        @include for-tablet-landscape-up {
+          word-spacing: 0.5rem;
+        }
+      }
+    }
+    .contact-wrapper {
+      display: flex;
+      align-items: center;
+      margin-bottom: 1rem;
+      .contact-icon {
+        img {
+          width: 2rem;
+        }
+      }
+      .contact-info {
+        margin-left: 1.5rem;
+        h4 {
+          font-size: 1.1rem;
+          font-weight: 500;
+          margin: 0 0 0.2rem;
+        }
+        p {
+          font-size: 1rem;
+          color: #333;
+          margin: 0;
+        }
+      }
+    }
+    .message-me {
+      h3 {
+        font-size: 1.2rem;
+        font-weight: 600;
+        margin-bottom: 0.9rem;
+      }
+      form {
+        .form-control {
+          border: 0.1rem solid lightgrey;
+          font-family: "Poppins", sans-serif;
+          transition: all 0.3s ease;
+          &:focus {
+            box-shadow: none;
+          }
+        }
+        button {
+          font-size: 1.1rem;
+          padding: 0.5rem 1.1rem;
+          margin: 0;
+          &:focus {
+            box-shadow: none;
+          }
+        }
+      }
+    }
+  }
+}
+// Contact Section Ends
+
+// Footer Section Starts
+footer {
+  background-color: $dark;
+  font-family: "Poppins", sans-serif;
+  padding: 1.5rem;
+  @include for-tablet-portrait-up {
+    padding: 1rem;
+  }
+  span {
+    font-size: 1rem;
+    color: $light;
+    margin: 0;
+    display: block;
+    text-align: center;
+    a {
+      font-size: 1rem;
+      color: $primary;
+      text-decoration: none;
+      &:hover {
+        color: $primary;
+        text-decoration: underline;
+      }
+    }
+    img {
+      width: 1rem;
+    }
+  }
+}
+// Footer Section Ends
